--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "eslint": "^4.18.1",
+    "eslint-plugin-import": "^2.9.0",
     "express": "^4.14.1",
     "mongoose": "^5.0.7"
   },
