--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "eslint": "^4.18.1",
     "eslint-plugin-import": "^2.9.0",
     "express": "^4.14.1",
-    "mongoose": "^5.0.7"
+    "mongoose": "^5.0.7",
+    "react-router-dom": "^4.2.2"
   },
   "repository": {
     "type": "git",
