--- a/react-ui/package.json
+++ b/react-ui/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "^1.1.0"
   },
   "dependencies": {
+    "npm": "^5.7.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2"
