--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "node": "8.9.x"
   },
   "scripts": {
-    "start": "nodemon server",
+    "start": "node server",
+    "devstart": "nodemon server",
     "heroku-postbuild": "cd react-ui/ && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "cacheDirectories": [
