--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-ui/node_modules"
   ],
   "dependencies": {
+    "async": "^2.6.0",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
     "eslint": "^4.18.1",
