--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bears-heroku",
+  "name": "StartAdventure",
   "version": "1.0.0",
   "description": "How to use create-react-app with a custom Node API on Heroku",
   "engines": {
