--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eslint-plugin-import": "^2.9.0",
     "express": "^4.14.1",
     "mongoose": "^5.0.7",
+    "npm": "^5.7.1",
     "react-router-dom": "^4.2.2"
   },
   "repository": {
